--- a/example/static/level.css
+++ b/example/static/level.css
@@ -23,3 +23,22 @@
     top: -1em;
     left: 1.5em;
 }
+
+.illustrate {
+    position: relative;
+    padding: 2em 1em;
+    /* color: #6F879C; */
+    /* background: rgba(136, 204, 255, 0.18); */
+    border-radius: 2px;
+    border: 2px solid #08f;
+}
+  
+.illustrate .title {
+    position: absolute;
+    background: white;
+    font: bold 1em/2em sans-serif;
+    padding: 0 0.5em;
+    text-align: center;
+    top: -1em;
+    left: 1.5em;
+}
