--- a/example/static/level.css
+++ b/example/static/level.css
@@ -21,6 +21,11 @@
     left: 1.5rem;
 }
 
+.level-block .title + * {
+    margin-top: 1rem;
+}
+
+
 .elaborate {
     border-radius: 2px;
     border: 2px solid #08f;
@@ -54,7 +59,8 @@
 }
 
 .processing-box {
-    height: 1.5rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
 }
 
 .right {
@@ -62,7 +68,7 @@
 }
 
 .inline-img {
-    height: 100%;
+    height: 1.5rem;
     vertical-align: middle;
 }
 
