--- a/example/static/level.css
+++ b/example/static/level.css
@@ -5,6 +5,51 @@
     src: local("Microsoft JhengHezi"), local("Heiti TC"), local("WenQuanYi Zen Hei");
 } */
 
+.course .menu-list-entry {
+    position: relative;
+    padding: 0.5rem 0.5rem;
+    margin: 0.3rem 0rem;
+}
+
+.course .menu-list-entry:hover {
+    background: rgb(245, 245, 253);
+}
+
+.course li + li {
+    border-top: dotted 2px #08f;
+}
+
+/* :after instead of :before cause
+   it messes with text-transform */
+.menu-list-entry:after {
+    content: " ";
+    float: left;
+    display: inline-block;
+    position: relative;
+    left: -0.5rem;
+    margin: 0.3rem 0rem;
+    height: 0.5rem;
+    width: 0.5rem;
+    box-sizing: border-box;
+    border: 0.15em solid #0087ff;
+    border-radius: 0.25rem;
+}
+  
+.menu-list-entry[completed]:after {
+    content: " ";
+    float: left;
+    display: inline-block;
+    position: relative;
+    left: -0.5rem;
+    margin: 0.3rem 0rem;
+    height: 0.5rem;
+    width: 0.5rem;
+    box-sizing: border-box;
+    border: 0.15em solid #0087ff;
+    border-radius: 0.25rem;
+    background-color: #0087ff;
+}
+
 .level[non-interactable] {
     pointer-events: none;
 }
