--- a/example/static/level.css
+++ b/example/static/level.css
@@ -5,18 +5,18 @@
     src: local("Microsoft JhengHezi"), local("Heiti TC"), local("WenQuanYi Zen Hei");
 } */
 
-.course .menu-list-entry {
+.menu-list .menu-list-entry {
+    display: block;
     position: relative;
     padding: 0.5rem 0.5rem;
-    margin: 0.3rem 0rem;
 }
 
-.course .menu-list-entry:hover {
+.menu-list .menu-list-entry:hover {
     background: rgb(245, 245, 253);
 }
 
-.course li + li {
-    border-top: dotted 2px #08f;
+.menu-list .menu-list-entry + .menu-list-entry {
+    border-top: dashed 2px rgb(149, 206, 255);
 }
 
 /* :after instead of :before cause
