--- a/example/static/level.css
+++ b/example/static/level.css
@@ -12,7 +12,11 @@
 }
 
 .menu-list .menu-list-entry:hover {
-    background: rgb(245, 245, 253);
+    background: rgb(247, 247, 252);
+}
+
+.menu-list .menu-list-entry:active {
+    background: rgb(242, 242, 247);
 }
 
 .menu-list .menu-list-entry + .menu-list-entry {
@@ -26,8 +30,8 @@
     float: left;
     display: inline-block;
     position: relative;
-    left: -0.5rem;
-    margin: 0.3rem 0rem;
+    left: -0.2rem;
+    margin: 0.3rem 0.3rem;
     height: 0.5rem;
     width: 0.5rem;
     box-sizing: border-box;
