--- a/example/static/level.css
+++ b/example/static/level.css
@@ -40,6 +40,41 @@
     opacity: 0.7;
 }
 
+.nav-bar {
+    padding: 0px;
+    margin: 0px;
+    height: 2.5rem;
+    line-height: 2.5rem;
+    width: 100%;
+    position: sticky;
+    text-align: center;
+    top: 0px;
+    background: #0076dd;
+}
+
+.nav-bar .title {
+    font-size: 2rem;
+    vertical-align: middle;
+    box-sizing: border-box;
+    display: inline-block;
+    font-weight: bold;
+    color: white;
+}
+
+.nav-bar .back {
+    position: absolute;
+    left: 0.2rem;
+    top: 0.25rem;
+    height: 2rem;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+.nav-bar .back:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
+
 .menu-list .menu-list-entry {
     display: block;
     position: relative;
