Remove redundant style drift-right; show complete image for confirmed elaborate and illustrate steps

--- a/example/static/level.css
+++ b/example/static/level.css
@@ -199,6 +199,11 @@
     align-self: flex-end;
 }
 
+.processing-box img:only-child {
+    margin-left: auto;
+    align-self: flex-end;
+}
+
 [red-highlight] {
     color: crimson;
 }
