--- a/example/static/level.css
+++ b/example/static/level.css
@@ -164,6 +164,11 @@
     border: 2px solid #08f;
 }
 
+.illustrate img[alt=illustration] {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .instruct {
     border-radius: 2px;
     color: #6F879C;
