Limit image width for all images with alternative text 'illustration'

--- a/example/static/level.css
+++ b/example/static/level.css
@@ -164,7 +164,7 @@
     border: 2px solid #08f;
 }
 
-.illustrate img[alt=illustration] {
+img[alt=illustration] {
     max-width: 100%;
     max-height: 100%;
 }
