--- a/example/static/level.css
+++ b/example/static/level.css
@@ -167,6 +167,9 @@
 img[alt=illustration] {
     max-width: 100%;
     max-height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .instruct {
@@ -223,7 +226,7 @@ img[alt=illustration] {
     opacity: 0.4;
 }
 
-dev[class~="img-title"] {
+div[class~="img-title"] {
     text-align: center;
     font-weight: bold;
 }
