Enlarge line space of tutorial texts

--- a/example/static/level.css
+++ b/example/static/level.css
@@ -153,6 +153,13 @@
     margin-top: 1rem;
 }
 
+.level-block .content p {
+    line-height: 1.5;
+}
+
+.level-block .content li {
+    line-height: 1.5;
+}
 
 .elaborate {
     border-radius: 2px;
