Complete the level create-branch-limit

--- a/example/static/level.css
+++ b/example/static/level.css
@@ -259,6 +259,10 @@ td.cell {
     text-align: center;
 }
 
+code {
+    background-color: #e3e3e3;
+}
+
 [blocked] {
     pointer-events: none;
     opacity: 0.4;
